[package]
name = "spider-web-search"
authors = ["Maxim Petrenko <meinbaumm@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool for web search on your favorite sites."
keywords = ["cli", "web-search"]
categories = ["command-line-utilities", "web-search"]
readme = "README.md"
repository = "https://github.com/meinbaumm/spider.git"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
open = "5.0.0"
regex = "1.9"
